Split files into folders

--- a/css/add_rss.css
+++ b/css/add_rss.css
@@ -2,6 +2,10 @@
 	min-width: 133px;
 }
 
+.series-root .section__top .info__right .button-wrapper .button.button-rss {
+	margin-left: 6px;
+}
+
 .vw-root .side-section--series .series-info .info-body__bottom .subscribe-btn {
 	display: inline-block;
 	width: 49%;
